@@ -1,0 +1,75 @@
+# Project
+project(libftdi)
+set(MAJOR_VERSION 0)
+set(MINOR_VERSION 15)
+set(PATCH_VERSION 0)
+set(VERSION_STRING ${MAJOR_VERSION}.${MINOR_VERSION}.${PATCH_VERSION})
+
+# CMake
+if("${CMAKE_BUILD_TYPE}" STREQUAL "")
+   set(CMAKE_BUILD_TYPE     Debug)
+endif("${CMAKE_BUILD_TYPE}" STREQUAL "")
+set(CMAKE_COLOR_MAKEFILE ON)
+cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
+
+# Debug build
+message("-- Build type: ${CMAKE_BUILD_TYPE}")
+if(${CMAKE_BUILD_TYPE} STREQUAL Debug)
+   add_definitions(-DDEBUG)
+endif(${CMAKE_BUILD_TYPE} STREQUAL Debug)
+
+# Set components
+set(CPACK_COMPONENTS_ALL sharedlibs staticlibs headers)
+set(CPACK_COMPONENT_SHAREDLIBS_DISPLAY_NAME "Shared libraries")
+set(CPACK_COMPONENT_STATICLIBS_DISPLAY_NAME "Static libraries")
+set(CPACK_COMPONENT_HEADERS_DISPLAY_NAME "C++ Headers")
+
+set(CPACK_COMPONENT_SHAREDLIBS_DESCRIPTION
+"Shared library for general use.")
+set(CPACK_COMPONENT_STATICLIBS_DESCRIPTION
+"Static library, good if you want to embed libkitclient in your application.")
+set(CPACK_COMPONENT_HEADERS_DESCRIPTION
+"C/C++ header files.")
+
+set(CPACK_COMPONENT_SHAREDLIBS_GROUP "Development")
+set(CPACK_COMPONENT_STATICLIBS_GROUP "Development")
+set(CPACK_COMPONENT_HEADERS_GROUP "Development")
+
+# Package information
+set(CPACK_PACKAGE_VERSION              ${VERSION_STRING})
+set(CPACK_PACKAGE_CONTACT              "Marek Vavrusa <marek@vavrusa.com>")
+set(CPACK_PACKAGE_DESCRIPTION          "FITKit multiplatform library.")
+set(CPACK_PACKAGE_DESCRIPTION_SUMMARY  ${CPACK_PACKAGE_DESCRIPTION}
+                                       )
+# Package settings
+if(${UNIX})
+  set(CPACK_GENERATOR                    "DEB;RPM")
+  set(CPACK_CMAKE_GENERATOR              "Unix Makefiles")
+  set(CPACK_PACKAGE_NAME                 ${PROJECT_NAME})
+  set(CPACK_PACKAGE_FILE_NAME            ${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION})
+endif(${UNIX})
+
+if(${WIN32})
+  set(CPACK_GENERATOR                    "NSIS")
+  set(CPACK_CMAKE_GENERATOR              "MinGW Makefiles")
+  set(CPACK_PACKAGE_NAME                 "${PROJECT_NAME}")
+  set(CPACK_PACKAGE_VENDOR               "")
+  set(CPACK_PACKAGE_INSTALL_DIRECTORY    "libftdi")
+  set(CPACK_PACKAGE_FILE_NAME            "${PROJECT_NAME}-${VERSION_STRING}-win32")
+  set(CPACK_NSIS_DISPLAY_NAME            "libftdi")
+  set(CPACK_NSIS_MODIFY_PATH             "ON")
+endif(${WIN32})
+
+set(CPACK_RESOURCE_FILE_LICENSE        ${CMAKE_SOURCE_DIR}/COPYING.LIB)
+
+# Subdirectories
+if(${UNIX})
+  set(CPACK_SET_DESTDIR "ON")
+endif(${UNIX})
+
+add_subdirectory(src)
+add_subdirectory(ftdipp)
+add_subdirectory(examples)
+add_subdirectory(packages)
+
+include(CPack)
