@@ -1,0 +1,41 @@
+# Includes
+include( ${CMAKE_CURRENT_SOURCE_DIR}
+         ${CMAKE_CURRENT_BINARY_DIR}
+         )
+
+# Source includes
+include_directories(${CMAKE_SOURCE_DIR}/src)
+
+# Targets
+add_executable(simple simple.c)
+add_executable(bitbang bitbang.c)
+add_executable(bitbang2 bitbang2.c)
+add_executable(bitbang_cbus bitbang_cbus.c)
+add_executable(bitbang_ft2232 bitbang_ft2232.c)
+add_executable(findall find_all.c)
+
+# Linkage
+target_link_libraries(simple ftdi)
+target_link_libraries(bitbang ftdi)
+target_link_libraries(bitbang2 ftdi)
+target_link_libraries(bitbang_cbus ftdi)
+target_link_libraries(bitbang_ft2232 ftdi)
+target_link_libraries(findall ftdi)
+
+# libftdi++ examples
+if(FTDI_BUILD_CPP)
+   message(STATUS "Building libftdi++ examples.")
+   include_directories(${CMAKE_SOURCE_DIR}/ftdipp)
+
+   # Targest
+   add_executable(findall-cpp find_all.cpp)
+   add_executable(memorytest memorytest.cpp)
+
+   # Linkage
+   target_link_libraries(findall-cpp ftdi_cpp)
+   target_link_libraries(memorytest ftdi_cpp)
+   
+endif()
+
+
+
