@@ -1,0 +1,2 @@
+# allow users to claim the device
+SUBSYSTEM=="usb_device", ATTRS{idVendor}=="0403", ATTRS{idProduct}=="6010", MODE="0664", GROUP="plugdev"
